--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.13",
     "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^8.0.7",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
